--- a/.github/workflows/cloud_regression.yml
+++ b/.github/workflows/cloud_regression.yml
@@ -1,7 +1,9 @@
 name: Trigger Cloud Regression E2E Tests
 on:
+  issue_comment:
+    types: [ created, edited ]
   push:
-    branches: [master]
+    branches: [ master ]
     paths:
       - 'CMakeLists.txt'
       - '**.c'
@@ -13,16 +15,26 @@ on:
 jobs:
   trigger_cloud_regression_tests:
     runs-on: ubuntu-latest
-    if: github.repository == 'netdata/netdata'
+    if: github.repository == 'netdata/netdata' && (github.event.issue.pull_request || github.event_name == 'push')
     steps:
+      - name: Check comment body matches pattern and user issued it is member of Netdata Org
+        id: is_organization_member
+        if: github.event_name == 'issue_comment' && github.event.comment.body == '/testit'
+        uses: jamesSingleton/is-organization-member@main
+        with:
+          organization: ${{ github.repository_owner }}
+          username: ${{ github.event.comment.user.login }}
+          token: ${{ secrets.NETDATABOT_GITHUB_TOKEN }}
+
       - name: Evaluate workflow dispatch parameters
+        if: github.event_name == 'push' || (github.event.issue.pull_request && steps.is_organization_member.outputs.result == 'true')
         env:
           PR_REPO_NAME: ${{ github.event.pull_request.head.repo.full_name }}
           PR_BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
           PR_COMMIT_HASH: ${{ github.event.pull_request.head.sha }}
         id: output-workflow-dispatch-params
         run: |
-          if [ ${{ github.event_name }} == 'pull_request_target' ]; then
+          if [ ${{ github.event_name }} == 'issue_comment' ]; then
             NETDATA_CUSTOM_REPO="$PR_REPO_NAME"
             NETDATA_CUSTOM_BRANCH="$PR_BRANCH_NAME"
             NETDATA_CUSTOM_PR_NUMBER="${{ github.event.number }}"
@@ -39,6 +51,7 @@ jobs:
           echo "netdata_commit_hash=${NETDATA_CUSTOM_COMMIT_HASH}" >> $GITHUB_OUTPUT
 
       - name: Trigger Full Cloud Regression
+        if: github.event_name == 'push' || (github.event.issue.pull_request && steps.is_organization_member.outputs.result == 'true')
         uses: aurelien-baudet/workflow-dispatch@v2
         with:
           repo: netdata/test-automation
@@ -54,6 +67,7 @@ jobs:
           wait-for-completion: false
 
       - name: Trigger Agent Parent/Child with Cloud Integration tests
+        if: github.event_name == 'push' || (github.event.issue.pull_request && steps.is_organization_member.outputs.result == 'true')
         uses: aurelien-baudet/workflow-dispatch@v2
         with:
           repo: netdata/test-automation
