update httpcheck_web_service_up info

--- a/health/health.d/httpcheck.conf
+++ b/health/health.d/httpcheck.conf
@@ -10,7 +10,7 @@ component: HTTP endpoint
      calc: ($this < 75) ? (0) : ($this)
     every: 5s
     units: up/down
-     info: percentage of successful HTTP requests to $label:url in the last minute
+     info: HTTP endpoint $label:url liveness status
        to: silent
 
  template: httpcheck_web_service_bad_content
