--- a/.github/workflows/docker-dummy.yml
+++ b/.github/workflows/docker-dummy.yml
@@ -2,7 +2,7 @@
 name: Docker
 on:
   pull_request:
-    paths: # This MUST be kept in-sync with the paths key for the dummy.yml workflow.
+    paths-ignore: # This MUST be kept in-sync with the paths key for the dummy.yml workflow.
       - '**.c'
       - '**.cc'
       - '**.h'
